# DeepLearning.AI.SemanticKernel.Course

./: L1_student.ipynb  L2_student.ipynb  L3_student.ipynb  L4_student.ipynb  L5_student.ipynb  README.md  pyproject.toml
plugins-sk/DesignThinking/Empathize/: config.json
plugins-sk/DesignThinking/Ideate/: config.json
plugins-sk/DesignThinking/PrototypeWithPaper/: config.json
plugins-sk/FriendlyConsultant/OneConsultation/: config.json
plugins-sk/FriendlyConsultant/Presentation/: config.json
plugins-sk/FriendlyConsultant/ResearchInterview/: config.json
plugins-sk/FriendlyConsultant/StepByStep/: config.json
plugins-sk/FriendlyConsultant/TrainingProgram/: config.json
plugins-sk/LiterateFriend/ShortPoem/: config.json
plugins-sk/LiterateFriend/Summarize/: config.json
plugins-sk/LiterateFriend/Translate/: config.json
